done with the header and lower footer

--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,5 +1,9 @@
 /* Colors */
+
+/* Header */
 $background: #010314;
 $foreground: #FFFFFF;
-$primary: #2a2b3a;
-$secondary: linear-gradient(90deg, rgba(68,103,255,1) 7%, rgba(114,65,255,0.43461134453781514) 82%) 2px solid;
+$primary: #2A2B3A;
+$secondary: linear-gradient($background,$background) padding-box, linear-gradient(90deg, rgba(68,103,255,1) 7%, rgba(114,65,255,0.43461134453781514) 82%) border-box;
+$secondary-text: #77798F;
+$header-text-hover: #FFFFFF;
