--- a/src/styles/components/_button.module.scss
+++ b/src/styles/components/_button.module.scss
@@ -3,22 +3,21 @@
 $height: 54px;
 $width: 138px;
 
-.button{
-    width: $width;
-    height: $height;
-    padding: auto{
-        inline: 40px;
-        block: 16px;
-    };
-    border: {
-        radius: 40px;
-        width: 2px;
-    };
-    background: transparent;
-    &__primary{
-        border: v.$foreground; 
-    }
-    &__secondary{
-        border: v.$secondary;
-    }
+.button {
+  width: $width;
+  height: $height;
+  padding: 16px 40px; // Corrected padding syntax
+  border: 1px solid transparent;
+  border-radius: 40px;
+  background: transparent;
+  cursor: pointer;
+
+  &__primary {
+    border-color: v.$primary; 
+  }
+
+  &__secondary {
+    background: v.$secondary;
+    border-radius: 40px;
+  }
 }
