--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -5,5 +5,6 @@ $background: #010314;
 $foreground: #FFFFFF;
 $primary: #2A2B3A;
 $secondary: linear-gradient($background,$background) padding-box, linear-gradient(90deg, rgba(68,103,255,1) 7%, rgba(114,65,255,0.43461134453781514) 82%) border-box;
-$secondary-text: #77798F;
+$primary-text: radial-gradient(circle, rgb(255,255,255,1) 30%, rgb(255,255,255,0.5) 100%);
+$secondary-text: #77798f;
 $header-text-hover: #FFFFFF;
