--- a/client_side/src/app/globals.css
+++ b/client_side/src/app/globals.css
@@ -17,6 +17,10 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 body {
